# usbwin

./: .gitignore  Cargo.toml  LICENSE  README.md
boot-asm/: Makefile  README.md  fake_bootmgr.asm  fat32_pbr.asm  mbr.asm  ntfs_pbr.asm
crates/bootsmith/: Cargo.toml
crates/bootsmith-core/: Cargo.toml
crates/bootsmith-core/src/: device.rs  lib.rs  plan.rs
crates/bootsmith-disk/: Cargo.toml
crates/bootsmith-disk/examples/: probe.rs
crates/bootsmith-disk/src/: lib.rs  macos.rs  raw.rs
crates/bootsmith-iso/: Cargo.toml
crates/bootsmith-iso/src/: lib.rs  udf.rs
crates/bootsmith/src/: main.rs  pipeline.rs
crates/bootsmith/src/pipeline/: boot_records.rs  confirm.rs  diskutil.rs  hybrid.rs  ntxp_floppy.rs  ntxp_iso.rs  ntxp_slipstream.rs  ntxp_txtsetup.rs  windows.rs  windows_2000.rs  windows_ntxp.rs
crates/bootsmith/src/pipeline/win2k_assets/: PROVENANCE.md  README.md
crates/usbwin/: Cargo.toml
crates/usbwin-boot/: Cargo.toml  build.rs
crates/usbwin-boot/src/: blobs.rs  lib.rs  mbr.rs  pbr.rs
crates/usbwin-boot/tests/: qemu_pbr.rs
crates/usbwin-core/: Cargo.toml
crates/usbwin-core/src/: device.rs  lib.rs  plan.rs
crates/usbwin-disk/: Cargo.toml
crates/usbwin-disk/examples/: probe.rs
crates/usbwin-disk/src/: lib.rs  macos.rs  raw.rs
crates/usbwin-iso/: Cargo.toml
crates/usbwin-iso/src/: lib.rs
crates/usbwin/src/: main.rs  pipeline.rs
crates/usbwin/src/pipeline/: boot_records.rs  confirm.rs  diskutil.rs  fat32.rs  hybrid.rs  ntxp_iso.rs  windows.rs  windows_2000.rs  windows_ntxp.rs  windows_xp.rs  windows_xp_sif.rs  windows_xp_unattended.rs  xp_staging.rs
crates/usbwin/src/pipeline/ntxp_assets/: firadisk.ima
crates/usbwin/src/pipeline/win2k_assets/: PROVENANCE.md  svbus.ima
crates/usbwin/src/pipeline/xp_assets/: ren_fold.cmd  undoren.cmd
docs/: AHCI_DRIVER.md  ARCHITECTURE.md  BACKLOG.md  BOOT_RECORDS.md  FIELD_FINDINGS_2026_05_18.md  HARDWARE_TESTS.md  PERFORMANCE.md  PROVENANCE.md  RECOVERY_PLAN.md  TECH_DEBT.md  V0.2_PBR_STATUS.md  V0.3_WINDOWS_XP.md  V1_BOOTREC_LIBRARY.md  WIN2K_SVBUS.md  XP_BOOT_INI.md  XP_FIRADISK_PIPELINE.md  XP_REGRESSION_2026_05_20.md  XP_UNATTENDED_RESEARCH.md
tests/fixtures/xp_sp3/: dosnet.inf  txtsetup.sif
