[workspace]
resolver = "2"
members = [
    "crates/bootsmith",
    "crates/bootsmith-core",
    "crates/bootsmith-iso",
    "crates/bootsmith-disk",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/jma24/bootsmith"
authors = ["John Appleby <johnmichaelappleby@gmail.com>"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
nix = { version = "0.27", features = ["fs", "ioctl", "mount"] }
plist = "1.6"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

bootsmith-core = { path = "crates/bootsmith-core", version = "1.0.0" }
bootsmith-iso  = { path = "crates/bootsmith-iso", version = "1.0.0" }
bootsmith-disk = { path = "crates/bootsmith-disk", version = "1.0.0" }
# mkmsbr is imported as `bootrec::` in source to avoid churn in the boot-record
# wrapper code. Use the published crate so a fresh checkout builds cleanly.
bootrec     = { version = "1.0.1", package = "mkmsbr", features = ["embed-boot-asm"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
