[package]
name = "bootsmith-disk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Raw device access for bootsmith. macOS impl; Linux/BSD planned."

[dependencies]
bootsmith-core.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
nix.workspace = true
plist.workspace = true
serde.workspace = true
