[package]
name = "bootsmith-iso"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "ISO9660 inspection and boot-mode auto-classification for bootsmith"

[dependencies]
bootsmith-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
