[package]
name = "usbwin-boot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MBR/GPT layout, FAT32 PBR splice, and the embedded boot blobs."
build = "build.rs"

[features]
# When set, build.rs invokes NASM to compile boot-asm/*.asm into 512-byte
# binaries that get include_bytes!'d. Without the feature, the embedded blobs
# are empty placeholders and any Windows-mode pipeline will error at runtime.
#
# Default is OFF in the scaffold so `cargo check` works on a machine without
# NASM. Will be flipped to default-on once the .asm sources are real.
embed-boot-asm = []

# Gates the byte-equality test vs ms-sys blobs. Requires
# USBWIN_MSSYS_BLOBS_DIR env var pointing at a local ms-sys checkout.
compare-mssys = []

[dependencies]
usbwin-core.workspace = true
thiserror.workspace = true
