[package]
name = "usbwin-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pipeline types, traits, and orchestration for usbwin"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
