[package]
name = "usbwin-disk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Raw device access for usbwin. macOS impl; Linux/BSD planned."

[dependencies]
usbwin-core.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
nix.workspace = true
