[package]
name = "usbwin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Native arm64 macOS bootable-USB writer."

[[bin]]
name = "usbwin"
path = "src/main.rs"

[[bin]]
name = "usbwin-eval"
path = "src/bin/eval.rs"

[dependencies]
usbwin-core.workspace = true
usbwin-iso.workspace = true
usbwin-disk.workspace = true
bootrec.workspace = true

anyhow.workspace = true
clap.workspace = true
indicatif.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
